# opensync-evolution2

./: CMakeLists.txt  CTestConfig.cmake
src/: CMakeLists.txt  evolution2_capabilities.c  evolution2_capabilities.h  evolution2_ebook.c  evolution2_ebook.h  evolution2_ecal.c  evolution2_ecal.h  evolution2_etodo.c  evolution2_etodo.h  evolution2_format.c  evolution2_memo.c  evolution2_memo.h  evolution2_sync.c  evolution2_sync.h
tests/: CMakeLists.txt  check_connect  check_init  check_sync
tools/: CMakeLists.txt  list_sources.c  test_uri.c
