LINK_DIRECTORIES( ${OPENSYNC_LIBRARY_DIRS} ${GLIB2_LIBRARY_DIRS} ${LIBEBOOK_LIBRARY_DIRS} ${LIBECAL_LIBRARY_DIRS} ${LIBEDATABOOK_LIBRARY_DIRS} ${LIBEDATACAL_LIBRARY_DIRS} ${LIBEDATASERVER_LIBRARY_DIRS} )
INCLUDE_DIRECTORIES( ${LIBEBOOK_INCLUDE_DIRS} ${LIBECAL_INCLUDE_DIRS} ${LIBEDATABOOK_INCLUDE_DIRS} ${LIBEDATACAL_INCLUDE_DIRS} ${LIBEDATASERVER_INCLUDE_DIRS} ${OPENSYNC_INCLUDE_DIRS} ${GLIB2_INCLUDE_DIRS} )

SET( list_sources_SRCS
list_sources.c
)

ADD_EXECUTABLE( list_sources ${list_sources_SRCS} )
TARGET_LINK_LIBRARIES( list_sources ${OPENSYNC_LIBRARIES} ${GLIB2_LIBRARIES} ${LIBEBOOK_LIBRARIES} ${LIBECAL_LIBRARIES} ${LIBEDATASERVER_LIBRARIES} )

ADD_EXECUTABLE( test_uri test_uri.c )
TARGET_LINK_LIBRARIES( test_uri ${OPENSYNC_LIBRARIES} ${GLIB2_LIBRARIES} ${LIBEBOOK_LIBRARIES} ${LIBECAL_LIBRARIES} ${LIBEDATASERVER_LIBRARIES} )

